<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 6 - Android Layouts</string>
    <string name="task1_title">Task 1: LinearLayout + FrameLayout</string>
    <string name="task2_title">Task 2: RelativeLayout</string>
    <string name="task3_title">Task 3: Dynamic Manipulation</string>
    <string name="task4_title">Task 4: ConstraintLayout</string>
    <string name="task5_title">Task 5: ConstraintSet</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="text_view_sample">Sample TextView</string>
    <string name="move_button">Move Component</string>
    <string name="header_text">Header</string>
    <string name="footer_text">Footer</string>
    <string name="center_text">Center Content</string>
</resources>
